fixed upload hover alignment bug

--- a/static/sass/Header/Header.sass
+++ b/static/sass/Header/Header.sass
@@ -178,6 +178,11 @@ $B: 0
 				top: 50%
 				transform: translateY(-50%)
 
+				.MASAS-link
+					min-width: 4rem
+					diplay: flex
+					justify-content: center
+
 			.header-link
 				min-width: 5rem
 				display: flex
